--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -253,7 +253,7 @@
     </string-array>
 
     <!-- Whether device supports double tap to wake -->
-    <!-- <bool name="config_supportDoubleTapWake">true</bool> -->
+    <bool name="config_supportDoubleTapWake">true</bool>
 
     <bool name="config_cameraDoubleTapPowerGestureEnabled">false</bool>
 </resources>
